Shenandoah: Concurrent Strong Roots logging is incorrect

XMLWordPrintable

    • gc
    • b20

        Look:

        [862.145s][info][gc,stats] Concurrent Strong Roots 940 us, parallelism: 2.40x
        [862.145s][info][gc,stats] Rendezvous 2254 us
        [862.145s][info][gc,stats] CSR: Code Cache Roots 75 us, workers (us): 16, 13, 12, 10, 8, 6, 5, 6,
        [862.145s][info][gc,stats] CSR: VM Weak Roots 2179 us, workers (us): ---, ---, ---, 403, 494, 418, 863, ---,

        It should be "CSR: <total>" where "Rendezvous" is.

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: