8254560: Shenandoah: Concurrent Strong Roots logging is incorrect

Reviewed-by: rkennke